# pids-jre-simulator

./: CLAUDE.md  DATA_FORMAT.md  INSTALL.md  JRE-PA-Simulator.spec  README.md  REFACTOR_PLAN.md  SCRATCH.md  UPPER_DISPLAY_UPDATE.md  app.py  audio.py  constants.py  display.py  main.py  old_version.py  preview_upper_lcd.py  pyproject.toml  requirements.txt  setup.py  utils.py
.claude/: settings.local.json
.claude/commands/: build.md
.claude/rules/: notes.md  preferences.md
.claude/skills/: build.md
.claude/skills/session-recap/: SKILL.md
.github/workflows/: release.yml
ai_utils/: FONT_RENDERING.md  check_font.py  check_font_station.py  font_metrics.txt  font_station_metrics.txt  font_utils.py
audio/chuo/: stations.json
audio/chuo/1654T/: route.json
audio/chuo/916H/: route.json
audio/joban/tsuchiura/: route.json
audio/keihin/: stations.json
audio/keihin/1275A/: route.json
audio/keihin/727B/: route.json
audio/keiyo/: route.json  stations.json
audio/keiyo/780Y_1510Y/: route.json
audio/nanbu/4027F/: route.json
audio/nanbu/603F/: route.json
audio/saikyo/: stations.json
audio/saikyo/1349F/: route.json
audio/saikyo/759K/: route.json
audio/tokaido/: route.json  stations.json
audio/tokaido/1865E/: route.json
audio/tokaido/3535E/: route.json
audio/yamanote/: route.json
data/: train_types.json  translations.json
displays/: __init__.py  base.py  utils.py
displays/train_models/: __init__.py
displays/train_models/e235_1000/: __init__.py  lower_lcd.py  upper_lcd.py
